# pink-flamingos-elt-project

./: .gitignore  README.md  main.py  pyproject.toml
dbt_pink_flamingos/: dbt_project.yml  profiles.yml
infra/: .env  docker-compose.yaml  docker-compose.yml  main.tf  variables.tf
infra/config/: airflow.cfg
infra/modules/airflow/: .env  Dockerfile.airflow  docker-compose.yaml
infra/modules/airflow/config/: airflow.cfg  profiles.yml
infra/modules/airflow/dags/: elt_pipeline.py  elt_skelet_dag.py  hello_world_dag.py
infra/modules/airflow/dags/src/: books_test.json  extract_load.py  load_to_postgres.py
infra/terraform/: main.tf  variables.tf
infra/terraform/app/: main.tf
infra/terraform/db/: db.tfvars  main.tf  variables.tf
infra/terraform/network/: main.tf
src/elt/: extract.py  load.py
